/* Proto definition for common components. */

syntax = "proto3";

enum DetectionType {
    DETECTION_TYPE_SDP = 0;
    DETECTION_TYPE_DPM = 1;
    DETECTION_TYPE_FRCNN = 2;
}

enum Sequences {
    MOT_17_02 = 0;
    MOT_17_04 = 1;
    MOT_17_05 = 2;
    MOT_17_09 = 3;
    MOT_17_10 = 4;
    MOT_17_11 = 5;
    MOT_17_13 = 6;
}

message Tracklet {
    AppearanceFeatureList ap_feature_list = 1;
    SpatialTemporalFeatures st_features = 2;
    Labellist label_list = 3;
    Topology topology = 4;

}

message TrackingDetection {
    uint32 frame_index = 1;
    uint32 detection_id = 2;
    float detection_score = 3;
    int32 box_x = 4;
    int32 box_y = 5;
    int32 box_width = 6;
    int32 box_height = 7;
    AppearanceFeatures features = 8;
}

message Labellist {
    repeated Label label = 1;
}

message Label {
    repeated int32 label = 1;
}

message Topology {
    repeated Edge edges = 1;
}

message Edge {
    int32 source = 1;
    int32 target = 2;
}

message SpatialTemporalFeatures {
    repeated SpatialTemporal features = 1;
    uint32 dim = 2;
}

message SpatialTemporal {
    uint32 x = 1;
    uint32 y = 2;
    uint32 w = 3;
    uint32 h = 4;
    uint32 frame = 5;
}

message AppearanceFeatureList {
    repeated Appearance features = 1;
}

message AppearanceFeatures {
    repeated Appearance features = 1;
    uint32 dim = 2;
}

message Appearance {
    repeated float feats = 1;
}